--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "start": "nx serve",
+    "build": "nx build",
+    "watch": "nx build --watch --configuration development",
+    "test": "nx test"
   },
   "private": true,
   "dependencies": {
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@fortawesome/angular-fontawesome": "^0.13.0",
     "bootstrap": "^5.3.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.7.0",
@@ -30,8 +31,13 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.7",
+    "@angular-devkit/core": "~16.1.7",
+    "@angular-devkit/schematics": "~16.1.7",
     "@angular/cli": "~16.1.7",
     "@angular/compiler-cli": "^16.1.0",
+    "@nx/angular": "16.7.4",
+    "@nx/workspace": "16.7.4",
+    "@schematics/angular": "~16.1.7",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
@@ -39,6 +45,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "nx": "16.7.4",
+    "nx-cloud": "latest",
     "typescript": "~5.1.3"
   }
 }
